examples/test/testpolicy28.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy28
  namespace: namespace7
spec:
  podSelector:
    matchLabels:
      key37: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value38
          key14: value4
          key1: value14
      podSelector:
        matchLabels:
          key32: value40
          key46: value22
